Docker management API and docker installation roles were merged.

--- a/roles/packetTracer_multiple/templates/gunicorn_start.sh.j2
+++ b/roles/packetTracer_multiple/templates/gunicorn_start.sh.j2
@@ -22,7 +22,7 @@ RUNDIR=$(dirname $SOCKFILE)
 test -d $RUNDIR || mkdir -p $RUNDIR
 
 # Start your unicorn
-exec gunicorn 'ptinstancemanager.wsgi:main("/home/vagrant/config.ini")' -b 127.0.0.1:8000 \
+exec gunicorn 'ptinstancemanager.wsgi:main("{{ config_file }}")' -b 127.0.0.1:8000 \
   --name "$NAME" \
   --workers $NUM_WORKERS \
   --user=$USER --group=$GROUP \
