Adding specific group information to gunicorn script.

--- a/roles/packetTracer_multiple/templates/gunicorn_start.sh.j2
+++ b/roles/packetTracer_multiple/templates/gunicorn_start.sh.j2
@@ -6,7 +6,7 @@ NAME="PacketTracer instances' management API"
 VENVDIR={{ venv_path }}
 SOCKFILE=/tmp/sock
 USER={{ remote_user }}
-GROUP={{ remote_user }}
+GROUP={{ remote_group }}
 NUM_WORKERS=3
 
 echo "Starting $NAME"
