--- a/roles/packetTracer_docker_xvfb/templates/Dockerfile.j2
+++ b/roles/packetTracer_docker_xvfb/templates/Dockerfile.j2
@@ -21,29 +21,33 @@ ENV ftp_proxy  {{ proxy_env.ftp_proxy }}
 RUN   dpkg --add-architecture i386
 
 
-# make sure the package repository is up to date
-RUN   apt-get update
-
-
 # Install supervisor, vnc and xvfb (and xfce) in order to create a graphic session
-RUN   apt-get install -y supervisor x11vnc xvfb
+RUN   apt-get update && apt-get install -y \
+      # BEGIN: PacketTracer's requirements
+      lib32nss-mdns \
+      libgtk2.0-0:i386 \
+      libnss3-1d:i386 \
+      libnspr4-0d:i386  \
+      libssl-dev:i386 \
+      libxml2:i386 \
+      libxslt1.1:i386 \
+      libqtwebkit-dev:i386  \
+      # END: PacketTracer's requirements
+      supervisor \
+      x11vnc \
+      xvfb \  # graphic session
 {%- if install_xfce %}
- xfce4 xfce4-goodies
+      xfce4 \
+      xfce4-goodies
 {% endif %}
-
-
-# Configure VNC server
-RUN   mkdir ~/.vnc && x11vnc -storepasswd "{{ vnc_password }}" ~/.vnc/passwd
-
-
-# Install PacketTracer's requirements
-RUN   apt-get install -y libgtk2.0-0:i386 libnss3-1d:i386 libnspr4-0d:i386  \
-          lib32nss-mdns libxml2:i386 libxslt1.1:i386 libqtwebkit-dev:i386 \
-          libssl-dev:i386
 
 
 # Clean packages
 RUN   apt-get autoclean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
+
+
+# Configure VNC server
+RUN   mkdir ~/.vnc && x11vnc -storepasswd "{{ vnc_password }}" ~/.vnc/passwd
 
 
 # Copy and configure PacketTracer
