Fixing minor issues in Dockerfiles.

--- a/roles/packetTracer_docker/templates/Dockerfile.j2
+++ b/roles/packetTracer_docker/templates/Dockerfile.j2
@@ -35,7 +35,8 @@ RUN   apt-get update && apt-get install -y \
       supervisor \
       tightvncserver \
       xfce4 \
-      xfce4-goodies
+      xfce4-goodies \
+      expect
 
 
 # Clean packages
