--- a/roles/packetTracer_docker_xvfb/templates/Dockerfile.j2
+++ b/roles/packetTracer_docker_xvfb/templates/Dockerfile.j2
@@ -1,4 +1,5 @@
 FROM    ubuntu:14.10
+MAINTAINER "Aitor Gomez-Goiri" <aitor.gomez-goiri@open.ac.uk>
 
 # Sources:
 #  - http://www.nuxeo.com/blog/docker-containers-nuxeo-part-2-add-vnc-openbox/
