Structuring Dockerfiles hierarchically to avoid instruction repetitions and to improve their readability.

--- a/roles/packetTracer_docker_xvfb/templates/Dockerfile.j2
+++ b/roles/packetTracer_docker_xvfb/templates/Dockerfile.j2
@@ -1,40 +1,9 @@
-FROM    ubuntu:14.10
+FROM  {{ docker_base_image }}
 MAINTAINER "Aitor Gomez-Goiri" <aitor.gomez-goiri@open.ac.uk>
 
-# Sources:
-#  - http://www.nuxeo.com/blog/docker-containers-nuxeo-part-2-add-vnc-openbox/
-#  - http://stackoverflow.com/questions/16296753/can-you-run-gui-apps-in-a-docker-container/16311264#16311264
-#  - https://github.com/welkineins/docker-ubuntu-xfce-vnc-desktop
 
-
-{% if proxy_env.http_proxy %}
-ENV http_proxy  {{ proxy_env.http_proxy }}
-{% endif %}
-{% if proxy_env.https_proxy %}
-ENV https_proxy  {{ proxy_env.https_proxy }}
-{% endif %}
-{% if proxy_env.ftp_proxy %}
-ENV ftp_proxy  {{ proxy_env.ftp_proxy }}
-{% endif %}
-
-
-# in Ubuntu Trusty this is necessary to access to i386 packages.
-RUN   dpkg --add-architecture i386
-
-
-# Install supervisor, vnc and xvfb (and xfce) in order to create a graphic session
+# Install vnc and xvfb (and xfce) in order to create a graphic session
 RUN   apt-get update && apt-get install -y \
-      # BEGIN: PacketTracer's requirements
-      lib32nss-mdns \
-      libgtk2.0-0:i386 \
-      libnss3-1d:i386 \
-      libnspr4-0d:i386  \
-      libssl-dev:i386 \
-      libxml2:i386 \
-      libxslt1.1:i386 \
-      libqtwebkit-dev:i386  \
-      # END: PacketTracer's requirements
-      supervisor \
       x11vnc \
       xvfb
 {%- if install_xfce %} \
@@ -49,28 +18,6 @@ RUN   apt-get autoclean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
 
 # Configure VNC server
 RUN   mkdir ~/.vnc && x11vnc -storepasswd "{{ vnc_password }}" ~/.vnc/passwd
-
-
-# Copy and configure PacketTracer
-ADD   {{ compressed_installation_file.name }} {{ compressed_installation_file.decompressed }}
-{% for file in compressed_installation_file.files %}
-{%    set src = compressed_installation_file.decompressed + "/" + file.backup %}
-{%    set dest = file.original_path + "/" + file.original_name %}
-{%    if file.optional %}
-RUN   if [ -f "{{ src }}" ]; then mv {{ src }} {{ dest }}; fi
-{%    else %}
-RUN   mv {{ src }} {{ dest }}
-{%    endif %}
-{% endfor %}
-{% for folder in compressed_installation_file.folders %}
-{%    set src = compressed_installation_file.decompressed + "/" + folder.backup %}
-{%    set dest = folder.original %}
-{%    if folder.optional %}
-RUN   if [ -d "{{ src }}" ]; then mv {{ src }} {{ dest }}; fi
-{%    else %}
-RUN   mv {{ src }} {{ dest }}
-{%    endif %}
-{% endfor %}
 
 
 # Set tasks to run in the appropriate order (Xvfb, x11vnc and PT)
