Fixing tagging and move to folder when they already existed.

--- a/roles/pt_instance_manager/templates/config.ini.j2
+++ b/roles/pt_instance_manager/templates/config.ini.j2
@@ -1,4 +1,5 @@
 [Docker]
+url: unix://var/run/docker.sock
 image_name: {{ docker_image }}
 vnc_port: {{ docker_vnc_port }}
 pt_port: {{ docker_pt_port }}
