Adapting to latest config.ini version.

--- a/roles/pt_instance_manager/templates/config.ini.j2
+++ b/roles/pt_instance_manager/templates/config.ini.j2
@@ -1,6 +1,7 @@
 [Docker]
 url: unix://var/run/docker.sock
 image_name: {{ docker_image }}
+data_container: {{ data_container }}
 vnc_port: {{ docker_vnc_port }}
 pt_port: {{ docker_pt_port }}
 
