Removing GUIless image creation, but avoiding to install/use VNC in the Xvfb base image by default.
This can still be installed modifying the new vnc_install variable.

--- a/roles/packetTracer_docker_xvfb/templates/Dockerfile_base.j2
+++ b/roles/packetTracer_docker_xvfb/templates/Dockerfile_base.j2
@@ -24,7 +24,7 @@ RUN   mkdir ~/.vnc && x11vnc -storepasswd "{{ vnc_password }}" ~/.vnc/passwd
 {% endif %}
 
 
-# Set tasks to run in the appropriate order (Xvfb and PT and maybe x11vnc)
+# Set tasks to run in the appropriate order
 COPY  supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 
