--- a/roles/pt_instance_manager/templates/gunicorn_start.sh.j2
+++ b/roles/pt_instance_manager/templates/gunicorn_start.sh.j2
@@ -1,13 +1,17 @@
 #!/bin/bash
 # Source: http://prakhar.me/articles/flask-on-nginx-and-gunicorn/
 
+NUM_CORES=`grep -c "^core id" /proc/cpuinfo`
+
 NAME="PacketTracer instances' management API"
 # FLASKDIR=/Code/flask_app
 VENVDIR={{ venv_path }}
 SOCKFILE=/tmp/sock
 USER={{ remote_user }}
 GROUP={{ remote_group }}
-NUM_WORKERS=3
+# Recomendation for sync workers from official documentation: 2 x $(num_cores) + 1.
+NUM_WORKERS=$NUM_CORES*2+1
+
 
 echo "Starting $NAME"
 
